--- a/news-item.html
+++ b/news-item.html
@@ -166,8 +166,8 @@
 						</div>
 						<div class="newsitem__gallery">
 							<ul class="gallery">
-	<li class="gallery__photo"><img src="img/content/newsitem.jpg" alt=""></li>
-	<li class="gallery__photo"><img src="img/content/newsitem.jpg" alt=""></li>
+	<li class="gallery__photo" data-img="img/content/newsitem.jpg"><img src="img/content/newsitem.jpg" alt=""></li>
+	<li class="gallery__photo" data-img="img/content/newsitem.jpg"><img src="img/content/newsitem.jpg" alt=""></li>
 </ul>
 						</div>
 					</div>
