--- a/404.html
+++ b/404.html
@@ -68,17 +68,23 @@
 				<ul class="social">
 	<li class="social__item">
 		<a href="#">
-			<i class="social-ico social-ico-fb"></i>
+			<svg>
+				<use xlink:href="#fb"/>
+			</svg>
 		</a>
 	</li>
 	<li class="social__item">
 		<a href="#">
-			<i class="social-ico social-ico-ok"></i>
+			<svg>
+				<use xlink:href="#ok"/>
+			</svg>
 		</a>
 	</li>
 	<li class="social__item">
 		<a href="#">
-			<i class="social-ico social-ico-vk"></i>
+			<svg>
+				<use xlink:href="#vk"/>
+			</svg>
 		</a>
 	</li>
 </ul>
